fix scrollbar in last_errors

--- a/src/admin_dashboard/frontend/analytics-service/src/assets/css/main.css
+++ b/src/admin_dashboard/frontend/analytics-service/src/assets/css/main.css
@@ -13,7 +13,7 @@ html, body {
 .page-container {
   display: flex;
   flex-direction: column;
-  max-width: 1480px;
+  max-width: 1510px;
   margin: 0 auto;
   padding: 0 15px;
   width: 100%;
